# envidat-python-utils

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  main.py  pyproject.toml  router_publish.py  sitemap.xml  test.py
about/LICENCE/: index.html
about/changelog/: index.html
api/metadata/v1/: index.html
api/s3/bucket/: index.html
api/s3/exceptions/: index.html
api/utils/: index.html
css/: extra.css
docs/: gen_docs.sh  mkdocs.yml  mkgendocs.yml
docs/docs/: index.md
docs/docs/api/: utils.md
docs/docs/api/converters/: bibtex.md  bibtex_converter.md  datacite.md  datacite_converter.md  dcat_ap.md  dif.md  dif_converter.md  iso.md  iso_converter.md  ris.md  ris_converter.md  xml.md  xml_converter.md
docs/docs/api/doi/: publisher.md  updater.md
docs/docs/api/metadata/: api-v1.md  record.md  v1.md
docs/docs/api/s3/: bucket.md  exceptions.md
envidat/: __version__.py  metadata.py  utils.py
envidat/api/: v1.py
envidat/config/: config_converters.json
envidat/converters/: bibtex_converter.py  config_converters.json  datacite_converter.py  dcat_ap_converter.py  dif_converter.py  envidat_bibtex_converter.py  envidat_iso_converter.py  envidat_ris_converter.py  envidat_xml_converter.py  iso_converter.py  opendataswiss_converter.py  ris_converter.py  test.py  xml_converter.py
envidat/converters/tests_converters/: ckan_converters_endpoints.py  test.py  test_ris.py
envidat/doi/: datacite_doi.py  datacite_publisher.py  datacite_updater.py
envidat/email/: __init__.py  constants.py  send_email.py  utils.py
envidat/s3/: bucket.py  exceptions.py
routers/: router_publish.py
scripts/: datacite_importer.py  datacite_updater_all_records.py  datacite_updater_records.py  metadata_to_csv.py
scripts/metadata_to_csv/: converting_to_csv.ipynb  metadata_to_csv.py
search/: search_index.json
src/envidat/s3/: bucket.py
templates/: email_publish_request.txt
tests/: conftest.py  test_bucket_io.py  test_bucket_utils.py  test_converters.py  test_metadata.py
